# DuckPoll

./: .gitignore  Cargo.toml  README.md
src/: database_functions.rs  index.html  index.liquid  main.rs  poll.html  poll.liquid  poll.rs  poll_template.html  results.liquid  submit.liquid  webpage.rs
