[package]
name = "DuckPoll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.95"