[package]
name = "DuckPoll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
lazy_static = "1.4.0"
liquid = "0.26.1"